Site review complete, tweaked all forms to look better, added hr to top of page, fixed radio buttons

--- a/app/assets/stylesheets/partials/_header.scss
+++ b/app/assets/stylesheets/partials/_header.scss
@@ -11,8 +11,13 @@
         }
     }
     small {
-        color: #777;
+        color: #a9a9a9;
         position: relative;
         margin-left: 5px;
+    }
+    .nav {
+        li a {
+            color: #a9a9a9;
+        }
     }
 }
