--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,6 +1,10 @@
 <% provide(:title, 'Contact') %>
-<div class="container-fluid">
+<div class="container">
     <h1>Send Us a Message</h1>
+
+    <h4>If you need to contact the UGA Quint State Crew e-mail us at <a href="mailto:quintstateuga@gmail.com">quintstateuga@gmail.com</a>. We'll try to get back to you within three days. If you want more information about our department <a href="http://www.fcs.uga.edu/hdfs">click here</a></h4>
+
+    <hr />
 
     <%= notice %>
 
