--- a/app/views/proposals/new.html.erb
+++ b/app/views/proposals/new.html.erb
@@ -1,6 +1,10 @@
 <% provide(:title, 'Proposal') %>
-<div class="container-fluid">
+<div class="container">
     <h1>Submit proposal</h1>
+
+    <h4>Ready to be a presenter at Quint State? Submit your proposal. Not sure what to submit? Read more here at <a href="http://quintstate2015.blogspot.com/">our blog</a></h4>
+
+    <hr />
 
     <%= notice %>
 
