--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,6 +1,10 @@
 <% provide(:title, 'Registration') %>
-<div class="container-fluid">
+<div class="container">
     <h1>Register for the Conference</h1>
+
+    <h4>We're excited to have you join at Quint State 2015. Got questions before you register? Check out the <%= link_to "FAQ", faq_path %> or <a href="http://quintstate2015.blogspot.com/">our blog</a>.</h4>
+
+    <hr />
 
     <%= render 'form' %>
 
