--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -1,51 +1,158 @@
-<div class="container-fluid">
+<div class="container">
 
   <% provide(:title, 'FAQ') %>
   <h1>FAQ</h1>
-  <p>Find me in app/views/static_pages/faq.html.erb</p>
+  <hr />
   <div class="panel-group" id="accordion">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-            Collapsible Group Item #1
+            Q: Where should we park for the conference?
           </a>
         </h4>
       </div>
       <div id="collapseOne" class="panel-collapse collapse in">
         <div class="panel-body">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+          A: Quint State will be held at the Tate Center at the University of Georgia. There is a parking garage located next to the Tate Center. Conference attendants can park there.
         </div>
       </div>
     </div>
+
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
-            Collapsible Group Item #2
+            Q: What do I need to prepare for the conference if I am a presenter?
           </a>
         </h4>
       </div>
       <div id="collapseTwo" class="panel-collapse collapse">
         <div class="panel-body">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+          A: Since there are three types of presentations given at Quint State each presenter will have slightly different needs. Posters presenters will need to provide their poster while round table and presentation presenters will need a powerpoint. If your proposal is accepted you'll be provided a list of required materials.
         </div>
       </div>
     </div>
+
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
-            Collapsible Group Item #3
+            Q: What is the Quint State Conference?
           </a>
         </h4>
       </div>
       <div id="collapseThree" class="panel-collapse collapse">
         <div class="panel-body">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+          A: Quint State is a conference for students by students. It is a joint effort between five universities (Auburn, Virginia Tech, University of Georgia,  University of Tennesee, University of North Carolina) since the name Quint State.you Quint State's goal is to allow students to practice professional skills while collaborating with future colleagues. The majority of students come from human development and family studies degrees but any student who is interested is welcome to attend.
         </div>
       </div>
     </div>
-  </div>
 
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
+            Q: I need to cancel my registration or presentation. How do I do this?
+          </a>
+        </h4>
+      </div>
+      <div id="collapseFour" class="panel-collapse collapse">
+        <div class="panel-body">
+          A: If you need to cancel your presentation or registration please e-mail us at quintstateuga@gmail.com. Please attempt to inform us of any changes or cancellations with at least one week's notice.
+        </div>
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
+            Q: How much does Quint State cost?
+          </a>
+        </h4>
+      </div>
+      <div id="collapseFive" class="panel-collapse collapse">
+        <div class="panel-body">
+          A: Because Quint State's goal is to help students prepare for their professional career there is no charge to attend. In fact, Quint provides housing and food through out the conference making the cost of attendance even lower.
+        </div>
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix">
+            Q: How does Quint State provide housing?
+          </a>
+        </h4>
+      </div>
+      <div id="collapseSix" class="panel-collapse collapse">
+        <div class="panel-body">
+          A: Each year the sponsoring university providing a housing option for conference attendants. This year University of Georgia students and faculty will be opening their homes to visiting students. Students will be paired with a host and be able to stay with that host for the duration of Quint State. If you have any concerns about housing be sure to include it on your registration information.
+        </div>
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">
+            Q: How will I know if my proposal has been accepted?
+          </a>
+        </h4>
+      </div>
+      <div id="collapseSeven" class="panel-collapse collapse">
+        <div class="panel-body">
+          A: All proposal submissions will have a decision by December 1, 2014. If you have not received your proposal information by this time please e-mail us at quintstateuga@gmail.com
+        </div>
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseEight">
+            Q: Where is the Quint State conference located at?
+          </a>
+        </h4>
+      </div>
+      <div id="collapseEight" class="panel-collapse collapse">
+        <div class="panel-body">
+          A: The 2015 Quint State Conference will be held at the University of Georgia's Tate Center. For directions click here.
+        </div>
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseNine">
+            Q: How do I know what type of presentation I should submit?
+          </a>
+        </h4>
+      </div>
+      <div id="collapseNine" class="panel-collapse collapse">
+        <div class="panel-body">
+          A: Check out this super helpful blog post <a href="http://quintstate2015.blogspot.com/">http://quintstate2015.blogspot.com/</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapseTen">
+            Q: What if my question isn't listed here?
+          </a>
+        </h4>
+      </div>
+      <div id="collapseTen" class="panel-collapse collapse">
+        <div class="panel-body">
+          A: Check out the Quint State blog at http://quintstate2015.blogspot.com/ for more info. If you still can't find the answer you're looking for e-mail us at quintstateuga@gmail.com
+        </div>
+      </div>
+    </div>
+
+  </div>
 </div>
