--- a/app/views/static_pages/schedule.html.erb
+++ b/app/views/static_pages/schedule.html.erb
@@ -1,8 +1,12 @@
 <% provide(:title, 'Schedule') %>
-<div class="container-fluid">
+<div class="container">
     <h1>Schedule</h1>
 
-    <div class="container">
+    <h4>Quint State will be held Feb 26th to 28th 2015. A full schedule will be available February 1, 2015</h4>
+
+    <hr />
+
+    <div class="container" style="display:none;">
         <ul class="timeline">
             <li><h2>Thursday February 27th, 2014</h2><small>Another Location</small></li>
             <li>
