--- a/app/assets/stylesheets/core/_boilerplate.scss
+++ b/app/assets/stylesheets/core/_boilerplate.scss
@@ -1,4 +1,5 @@
-.container-fluid {
+.container-fluid,
+.container {
     max-width: 1170px;
     margin:0 auto;
     img {
@@ -16,10 +17,38 @@ a {
         text-decoration: none;
     }
 }
+.footer {
+    color: #a9a9a9;
+}
 
 .main-content {
     background-color: #eee;
-    > .container-fluid {
-        margin-top:50px;
+    > .container-fluid,
+    > .container {
+        padding-top:75px;
     }
+
+
+    h4 {
+        line-height: 1.5;
+        margin-bottom: 10px;
+    }
+    form {
+        margin: 30px 0;
+
+        .actions {
+            .btn {
+                float:none;
+            }
+        }
+    }
+    hr {
+        border-top: 1px solid #ddd;
+    }
+    .form-horizontal {
+        @extend .well;
+    }
+
 }
+
+
