--- a/app/assets/stylesheets/partials/_footer.scss
+++ b/app/assets/stylesheets/partials/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
     background-color: $darkGray;
-    color: #777;
+    color: #a9a9a9;
     padding-top: 15px;
     small {
         display: block;
