--- a/app/assets/stylesheets/partials/_forms.scss
+++ b/app/assets/stylesheets/partials/_forms.scss
@@ -7,4 +7,13 @@
     select {
         @extend .col-sm-6;
     }
+    .radio-inline {
+        margin-bottom: 15px;
+        text-align: left;
+        width:auto;
+    }
+    input[type=radio] {
+        left: 15px;
+        width: 20px;
+    }
 }
