--- a/app/assets/stylesheets/partials/_home.scss
+++ b/app/assets/stylesheets/partials/_home.scss
@@ -33,4 +33,20 @@ h2 {
 .jumbotron {
     margin-bottom: 0;
     text-align: center;
+    padding-bottom: 0;
+
+    .container {
+        position: relative;
+    }
+    .jumbotron-headline {
+        position: absolute;
+        top: 30%;
+        left: 15px;
+        right: 15px;
+        background: rgba(204,204,204,0.8);
+
+        h1 {
+            font-size:76px;
+        }
+    }
 }
