Remove registration url

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
         <ul class="nav navbar-nav pull-right">
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Submit Proposal", '/submit/proposal' %></li>
-          <li>Registration<!-- <%= link_to "Registration", '/submit/registration' %> --></li>
+          <li><!-- <%= link_to "Registration", '/submit/registration' %> --></li>
           <li><%= link_to "Schedule", schedule_path %></li>
           <li><%= link_to "FAQ", faq_path %></li>
           <li><%= link_to "Contact", '/contact_us' %></li>
