Limit words, btn styles

--- a/app/assets/stylesheets/partials/_forms.scss
+++ b/app/assets/stylesheets/partials/_forms.scss
@@ -16,4 +16,9 @@
         left: 15px;
         width: 20px;
     }
+    .actions {
+        .btn {
+            margin-left: 155px;
+        }
+    }
 }
