--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -25,7 +25,7 @@
       <%= f.text_area :questions, :class => 'form-control' %>
     </div>
     <div class="actions form-group">
-      <%= f.submit 'Send Message', :class => 'btn btn-default' %>
+      <%= f.submit 'Send Message', :class => 'btn btn-primary' %>
     </div>
   </div>
 <% end %>
