--- a/app/views/registrations/_form.html.erb
+++ b/app/views/registrations/_form.html.erb
@@ -84,7 +84,7 @@
         <%= f.text_area :additional_information, :class => 'form-control' %>
       </div>
       <div class="actions">
-        <%= f.submit 'Register', :class => 'btn btn-default' %>
+        <%= f.submit 'Register', :class => 'btn btn-primary' %>
       </div>
     </div>
 <% end %>
