Fix School names, Update faq content

--- a/app/views/proposals/_form.html.erb
+++ b/app/views/proposals/_form.html.erb
@@ -29,7 +29,7 @@
     </div>
     <div class="field form-group">
       <%= f.label :school, :class => 'control-label' %>
-      <%= f.select :school, [ 'University of Georgia', 'Virginia Tech', 'Auburn University', 'University of Tennessee', 'University of North Carolina (filler)' ], { :prompt => 'Choose a School' }, :class => 'form-control' %>
+      <%= f.select :school, [ 'University of Georgia', 'Virginia Tech', 'Auburn University', 'University of Tennessee', 'University of North Carolina Greensboro' ], { :prompt => 'Choose a School' }, :class => 'form-control' %>
     </div>
     <div class="field form-group">
       <%= f.label :credentials, :class => 'control-label' %>
