--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -113,7 +113,7 @@
       <div class="panel-heading">
         <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapseEight">
-            Q: Where is the Quint State conference located at?
+            Q: Where is the Quint State Conference located?
           </a>
         </h4>
       </div>
