--- a/app/views/registrations/_form.html.erb
+++ b/app/views/registrations/_form.html.erb
@@ -22,7 +22,7 @@
       </div>
       <div class="field form-group">
         <%= f.label :school, :class => 'control-label' %>
-        <%= f.select :school, [ 'University of Georgia', 'Virginia Tech', 'Auburn University', 'University of Tennessee', 'University of North Carolina (filler)' ], { :prompt => 'Choose a School' }, :class => 'form-control' %>
+        <%= f.select :school, [ 'University of Georgia', 'Virginia Tech', 'Auburn University', 'University of Tennessee', 'University of North Carolina Greensboro' ], { :prompt => 'Choose a School' }, :class => 'form-control' %>
       </div>
       <div class="field form-group">
         <%= f.label :presenter, :class => 'control-label' %>
