--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -16,6 +16,11 @@
 </p>
 
 <p>
+  <strong>Phone:</strong>
+  <%= @registration.phone %>
+</p>
+
+<p>
   <strong>Presenter:</strong>
   <%= @registration.presenter %>
 </p>
@@ -41,9 +46,22 @@
 </p>
 
 <p>
-  <strong>Smoking:</strong>
-  <%= @registration.smoking %>
+  <strong>Comfortable with Dogs:</strong>
+  <%= @registration.comfortable_dogs %>
 </p>
+<p>
+  <strong>Comfortable with Cats:</strong>
+  <%= @registration.comfortable_cats %>
+</p>
+<p>
+  <strong>Comfortable with Kids:</strong>
+  <%= @registration.comfortable_kids %>
+</p>
+<p>
+  <strong>Comfortable with Smoking:</strong>
+  <%= @registration.comfortable_smoking %>
+</p>
+
 
 <p>
   <strong>Housing residents:</strong>
