--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -6,12 +6,13 @@
       <th>Name</th>
       <th>Email</th>
       <th>School</th>
+      <th>Phone</th>
       <th>Presenter</th>
       <th>Allergies</th>
       <th>Days attending</th>
       <th>Housing needed</th>
       <th>Animal allergies</th>
-      <th>Smoking</th>
+      <th>Comfortable With</th>
       <th>Housing residents</th>
       <th>Housing sleep situation</th>
       <th>Additional information</th>
@@ -27,12 +28,13 @@
         <td><%= registration.name %></td>
         <td><%= registration.email %></td>
         <td><%= registration.school %></td>
+        <td><%= registration.phone %></td>
         <td><%= registration.presenter %></td>
         <td><%= registration.allergies %></td>
         <td><%= registration.days_attending %></td>
         <td><%= registration.housing_needed %></td>
         <td><%= registration.animal_allergies %></td>
-        <td><%= registration.smoking %></td>
+        <td>Dogs: <%= registration.comfortable_dogs %> | Cats: <%= registration.comfortable_cats %> | Kids: <%= registration.comfortable_kids %> | Smoking: <%= registration.comfortable_smoking %></td>
         <td><%= registration.housing_residents %></td>
         <td><%= registration.housing_sleep_situation %></td>
         <td><%= registration.additional_information %></td>
