--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,10 +13,7 @@
     <div class="row">
       <div class="col-md-12">
         <h2 class="text-center">Are you ready to get involved?</h2>
-        <p>Quint State is the meeting of five southeastern universites. It is a conference run by students for students. Our goal is to provide student an opportunity to polish their professional skills and find future collaborators. We will begin accepting proposals September 1st, 2014. Registration will open November 1st. We look forward to meeting with and learning from you.</p>
-        <div class="call-to-action-button-group">
-          <%= link_to "Register for the Conference", '/submit/registration', :class => 'btn btn-danger' %>
-        </div>
+        <p>At this time Quint State registration is closed. If you have any questions pleaase send us a message through our contact form. An official schedule for the conference will be available February 1, 2015.</p>
       </div>
     </div>
   </div>
