--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="col-md-12">
         <h2 class="text-center">Are you ready to get involved?</h2>
-        <p>At this time Quint State registration is closed. If you have any questions pleaase send us a message through our contact form. An official schedule for the conference will be available February 1, 2015.</p>
+        <p>At this time Quint State registration is closed. If you have any questions please send us a message through our contact form. An official schedule for the conference will be available February 1, 2015.</p>
       </div>
     </div>
   </div>
