Start on schedule page, Add download route and controller for program pdf

--- a/app/views/static_pages/schedule.html.erb
+++ b/app/views/static_pages/schedule.html.erb
@@ -2,18 +2,21 @@
 <div class="container">
     <h1>Schedule</h1>
 
-    <h4>Quint State will be held Feb 26th to 28th 2015. A full schedule will be available February 1, 2015</h4>
+    <h4>Quint State will be held Feb 26th to 28th 2015. A full schedule will be available February 1, 2015.</h4>
+
+    <p>Listed below is an outline of the conference schedule. You may also download a printable version <%= link_to 'download a printable version here', static_pages_download_url %>.</p>
 
     <hr />
 
-    <div class="container" style="display:none;">
+    <div class="container">
         <ul class="timeline">
-            <li><h2>Thursday February 27th, 2014</h2><small>Another Location</small></li>
+            <li><h2>Thursday February 27th, 2015</h2><small>Dawson Hall</small></li>
             <li>
               <div class="timeline-badge"><i class="fa fa-users"></i></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4 class="timeline-title">Welcome Social Event</h4>
+                  <p><span class="fa fa-map-marker"></span> <a href="https://www.google.com/maps/place/33%C2%B056'49.3%22N+83%C2%B022'32.7%22W/@33.947018,-83.375751,19z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0">Dawson Hall, Room 116</a></p>
                   <p><small class="text-muted"><i class="fa fa-clock-o"></i> 6:00pm - 8:00pm</small></p>
                 </div>
                 <div class="timeline-body">
@@ -25,57 +28,133 @@
 
             <hr />
             <!-- End Thursday -->
-            <li><h2>Friday Februrary 28th, 2014</h2><small>Black Cultural Center and University Center</small></li>
+            <li><h2>Friday Februrary 28th, 2015</h2><small>Tate Center</small></li>
 
             <li>
               <div class="timeline-badge info"><i class="fa fa-coffee"></i></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4 class="timeline-title">Breakfast and Registration</h4>
+                  <p><span class="fa fa-map-marker"></span> Tate Center, Room 482</p>
                   <p><small class="text-muted"><i class="fa fa-clock-o"></i> 8:00am - 9:00am</small></p>
                 </div>
                 <div class="timeline-body">
-                  <p>(need more info)</p>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="timeline-badge info"></div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4 class="timeline-title">Presentation #1</h4>
-                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 9:30am - 10:30am</small></p>
-                </div>
-                <div class="timeline-body">
-                  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-
-                </div>
-              </div>
-            </li>
-            <li>
-            <div class="timeline-badge info"></div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4 class="timeline-title">Presentation #2</h4>
-                </div>
-                <div class="timeline-body">
-                  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                  <p></p>
                 </div>
               </div>
             </li>
 
             <li>
-                <div class="timeline-badge info"><i class="fa fa-spoon"></i></div>
+              <div class="timeline-badge info"><i class="fa fa-comment-o"></i></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4 class="timeline-title">Lunch</h4>
-                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 12:00am - 1:30am</small></p>
+                  <h4 class="timeline-title">Welcome and Introduction.</h4>
+                  <p><span class="fa fa-map-marker"></span> Tate Center, Room 482</p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 9:30am - 10:00am</small></p>
                 </div>
                 <div class="timeline-body">
-                  <p>Om nom nom nom.</p>
+                  <p>Welcome and Introduction with Dean Fox, Dr. Smith, and Megan Oed.</p>
                 </div>
               </div>
             </li>
+
+            <!-- Paper presentation morning -->
+            <li><h3>Paper Presentation / Round Table #1 (10:05am - 10:35am)</h3></li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>The Impact of Foster Parenting on Foster Parents’ Relationship Quality</em></h4>
+                  <h5><small>Speaker: </small>Evin Winkelman Richardson</h5>
+                  <p><span class="fa fa-map-marker"></span> Tate Center, Room 482</p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 10:05am - 10:35am</small></p>
+                </div>
+                <div class="timeline-body">
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>Change in Dating Violence Acceptability as Predicted by Change in Gender Role Attitudes for Males and Females Following Relationship Education</em></h4>
+                  <h5><small>Speaker: </small>Rachel Savasuk</h5>
+                  <p><span class="fa fa-map-marker"></span> Tate Center, Room 480</p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 10:05am - 10:35am</small></p>
+                </div>
+                <div class="timeline-body">
+
+                </div>
+              </div>
+            </li>
+
+            <li><h3>Poster Session (10:45am - 11:30am)</h3><small>Tate Center, Room 480</small></li>
+
+            <li><h3>Paper Presentation / Round Table #2 (11:30am - 12:05pm)</h3></li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>Gay Father Families: Kinship and Help-Seeking Behavior</em></h4>
+                  <h5><small>Speaker: </small>Emma Potter</h5>
+                  <p><span class="fa fa-map-marker"></span> Tate Center, Room 482</p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 11:30am - 12:05pm</small></p>
+                </div>
+                <div class="timeline-body">
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comments"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>Messages from the Milieu: Classroom Instruction and Context Influences on Elementary School Students’ Academic Self-Regulation</em></h4>
+                  <h5><small>Speaker: </small>Lisa Connor</h5>
+                  <p><span class="fa fa-map-marker"></span> Tate Center, Room 480</p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 11:30am - 12:05pm</small></p>
+                </div>
+                <div class="timeline-body">
+
+                </div>
+              </div>
+            </li>
+
+            <li><h3>Lunch and the Future of Quint State (12:05pm - 1:00pm)</h3><small>Tate Center, Room 480</small></li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comment-o"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>Mixed Methods Research: Controversies and Considerations</em></h4>
+                  <h5><small>Speaker: </small>Dr. Jori Hall</h5>
+                  <p><span class="fa fa-map-marker"></span> Tate Center, Room 480</p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 1:00pm – 2:00pm</small></p>
+                </div>
+                <div class="timeline-body">
+
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="timeline-badge info"><i class="fa fa-comment-o"></i></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="timeline-title"><em>Learning to Teach and Teaching to Learn</em></h4>
+                  <h5><small>Speaker: </small>Dr. Melissa Kozak</h5>
+                  <p><span class="fa fa-map-marker"></span> Tate Center, Room 480</p>
+                  <p><small class="text-muted"><i class="fa fa-clock-o"></i> 2:15pm – 3:00pm</small></p>
+                </div>
+                <div class="timeline-body">
+
+                </div>
+              </div>
+            </li>
+
 
             <hr />
             <!-- End Friday -->
